[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "athils"
version = "0.0.1"
authors = [
  { name="Atharv Sonwane", email="atharvs.twm@gmail.com" },
]
description = "A portable package of miscellaneous utilities"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]